初步樣式設計-2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<section>
 		<div id="app">
 			<svg class="taiwan_map" id="cf503461-00bd-459a-aeb5-062ebc913211" data-name="圖層 1" xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 595.28 841.89" width="550px" height="550px" fill="#18B7BE" >
+				viewBox="0 0 470.28 795.89" width="600px" height="600px" fill="#18B7BE" >
 				<defs />
 				<title>
 					taiwan.svg
@@ -219,91 +219,157 @@
 				<ul>
 					<li class="g1">
 						<span class="city city1">基隆市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_1" class="city_1_class" src="./image/icons8-rain-100.png">
+							<span id="text_1" class="textW">晴天</span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">宜蘭縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_2" class="city_1_class" src="./image/png/005-thunderstorm.png">
+							<span id="text_2" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">台北市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_3" class="city_1_class">
+							<span id="text_3" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">新北市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_4" class="city_1_class">
+							<span id="text_4" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">桃園市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_5" class="city_1_class">
+							<span id="text_5" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">新竹縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_6" class="city_1_class">
+							<span id="text_6" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">新竹市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_7" class="city_1_class">
+							<span id="text_7" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">苗栗縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_8" class="city_1_class">
+							<span id="text_8" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">台中市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_9" class="city_1_class">
+							<span id="text_9" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">彰化縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_10" class="city_1_class">
+							<span id="text_10" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">南投縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_11" class="city_1_class">
+							<span id="text_11" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">雲林縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_12" class="city_1_class">
+							<span id="text_12" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">嘉義縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_13" class="city_1_class">
+							<span id="text_13" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">嘉義市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_14" class="city_1_class">
+							<span id="text_14" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">台南市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_15" class="city_1_class">
+							<span id="text_15" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">高雄市</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_16" class="city_1_class">
+							<span id="text_16" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">屏東縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_17" class="city_1_class">
+							<span id="text_17" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">台東縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_18" class="city_1_class">
+							<span id="text_18" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">花蓮縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_19" class="city_1_class">
+							<span id="text_19" class="textW"></span>
+						</span>
 					</li>
 					<li class="g2">
 						<span class="city city2">金門縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_20" class="city_1_class">
+							<span id="text_20" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">澎湖縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_21" class="city_1_class">
+							<span id="text_21" class="textW"></span>
+						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">馬祖縣</span>
-						<span></span>
+						<span class="span2">
+							<img id="city_22" class="city_1_class" src="./image/icons8-rain-100.png">
+							<span id="text_22" class="textW">多雲有雨</span>
+						</span>
 					</li>
 				</ul>
 			</div>
