add weather & rain percent data

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,8 @@
 	<link rel="stylesheet" href="css/nav.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+
+<body onload="renderWeather();">
 	<nav>
 		<div class="box">
 			<p class="title">TaiwanWeatherMap台灣即時天氣播報站</p>
@@ -23,8 +25,9 @@
 	</nav>
 	<section>
 		<div id="app">
-			<svg class="taiwan_map" id="cf503461-00bd-459a-aeb5-062ebc913211" data-name="圖層 1" xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 470.28 795.89" width="600px" height="600px" fill="#18B7BE" >
+			<svg class="taiwan_map" id="cf503461-00bd-459a-aeb5-062ebc913211" data-name="圖層 1"
+				xmlns="http://www.w3.org/2000/svg" viewBox="0 0 470.28 795.89" width="600px" height="600px"
+				fill="#18B7BE">
 				<defs />
 				<title>
 					taiwan.svg
@@ -165,7 +168,8 @@
 						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 						d="M46.69,248.23,47,249l.44.63-.25.5.94.06.63.31.56-.38-.13-.44-.94-.06-.44-1.44-1.13.06h0Z" />
 					<path id="69a6ddb2-05bc-4235-b68c-837d8cf3e8ef" data-name="path2647"
-						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9" d="M45.75,250.81l-.44.56,1.57.38.5-.38-1.63-.56Z" />
+						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
+						d="M45.75,250.81l-.44.56,1.57.38.5-.38-1.63-.56Z" />
 					<path id="095a4c54-e8f5-4120-91cf-b6c705de29ff" data-name="path2651"
 						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 						d="M105.89,223.38l-.25-.88-.44-.63v-.94l-.44-.56.38-.44h-.82l.06-.5-.63-.06-.5.13L103,219l-1.07,1.19-.31-.63.63-.38-.56-.38-.63.38-.38.56.69.56.5.69-.25.75-.82.13-1.13.82-.82.13-.82-.06-.31.19-.19.63.31.5.06.88.88-.94.69.31h.94l-.06.5h-.94l.63.56.31.63-.56.38v.94l-.63-.19-.82-1.13-.5-.44-.13.63.38.63v.19l-.63.69-.63.38-.38.56-.63.31h-.94l.88.82-.25.31.38,1.63-.19.5h-.38l-1.19.94-.38.63-5.52-.75-7.41-5.34-.82-.19-.25-.19-.44.5-.88.13L77,229.46l-.82.13-1.38,2.57,1.51.88.82.19L77,232.6l-.5-.57.63-.31,1.88.06.31-.75.63-.38.5.56-.06,1.19-.5.5-1.63.31L78,234v1.26l.25.19.5.82.5,1.63v1.88l.13.5,1.07.13.44.5-.06.88-.69.25-.44-1.19-.31.63-1.51.19-.06,1.57-.57.44-2.76.06-.38-.31.06-.88-.56,1.13-.75-.13-.19.63.69.5.63.25,1.13,1.51,1,.82.38.69,1.82.13.69.31.38.75.88.31,1,.13,1.38.88.31-.57,1.07-.19.25-.69.5-.44.38-1.63L87.19,244l.5-.44.44-.63.57-.44.13-.31.82-.13.57-.38.82-.19.5-.44.63-.31.88-.06,1.38-.56,5.4-.38,1,.38,1.13.94.63.31h.94l1.57.63,1.63,1.63-.06.75-.44.56-.56.38-.38.13.75.31H107l.69-.25.56-.44.82-.19.44-.63,1.57-.38.25-.69-.31-.56.19-.69.56-.25.94.19.44-.5.25-.56-.94-1.13-.13-.69,1.26-.75.69-.06.38.38.69-.57-.25-.56.06-.63.31-.5-.63-.31h-.94l-.19-.5-.5-.5-.5-2.32v-1.51l1-.63.25-.75-.44-.5-1.38.5-.63-.19-.31-.63-.38-1.57.13-.82-.44-.38-.63-.31-.13-2.32-3.83-.19h0Z" />
@@ -197,7 +201,8 @@
 						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
 						d="M58,91.41l.27,6.52.54-3L61,93.58l3.26-.27,2.44-1.63,1.9,2.17.54-1.36-2.44-4.07-8.69,3Z" />
 					<path id="f2323ce6-4de0-4fd5-9e90-8aa5c070854a" data-name="path2681"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3" d="M62.35,77.29l-1.63,3.26,1.16.49,1.28-1-.81-2.71Z" />
+						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
+						d="M62.35,77.29l-1.63,3.26,1.16.49,1.28-1-.81-2.71Z" />
 					<path id="3dc2b0c9-caa5-41e4-a9fd-9ba7b2a05d51" data-name="path2683"
 						class="bc4bd339-f614-4405-a1f2-7f894051d5a3" d="M66.42,84.62l-1.9,1.9L67.23,86l-.82-1.36Z" />
 					<path id="7c90d772-951b-4902-97ae-a2a6a67d9b26" data-name="path2685"
@@ -207,12 +212,12 @@
 						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
 						d="M176.9,53.81l-1.63,1.43.14.47,2.85.2-.14-.81-1.22-1.29Z" />
 				</g>
-			</svg>	
+			</svg>
 		</div>
 		<div class="weather_box">
 			<div class="button_box">
-				<div class="button">天氣狀況</div>
-				<div class="button">紫外線</div>
+				<div class="button weather-btn">天氣狀況</div>
+				<div class="button percent-btn">降雨機率</div>
 				<div class="button">累積雨量</div>
 			</div>
 			<div class="weather">
@@ -220,14 +225,14 @@
 					<li class="g1">
 						<span class="city city1">基隆市</span>
 						<span class="span2">
-							<img id="city_1" class="city_1_class" src="./image/icons8-rain-100.png">
-							<span id="text_1" class="textW">晴天</span>
+							<img id="city_1" class="city_1_class">
+							<span id="text_1" class="textW"></span>
 						</span>
 					</li>
 					<li class="g1">
 						<span class="city city1">宜蘭縣</span>
 						<span class="span2">
-							<img id="city_2" class="city_1_class" src="./image/png/005-thunderstorm.png">
+							<img id="city_2" class="city_1_class">
 							<span id="text_2" class="textW"></span>
 						</span>
 					</li>
@@ -367,24 +372,24 @@
 					<li class="g1">
 						<span class="city city1">馬祖縣</span>
 						<span class="span2">
-							<img id="city_22" class="city_1_class" src="./image/icons8-rain-100.png">
-							<span id="text_22" class="textW">多雲有雨</span>
+							<img id="city_22" class="city_1_class">
+							<span id="text_22" class="textW"></span>
 						</span>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</section>
-        <div class="title_area">
-            <hr />
-            <div class="forcast" v-if="now_area">
-                <h5>{{now_area.place}}</h5>
-                <h4>{{now_area.low}}~{{now_area.high}}</h4>
-                <h2>{{now_area.weather}}</h2>
-            </div>
+	<div class="title_area">
+		<hr />
+		<div class="forcast" v-if="now_area">
+			<h5>{{now_area.place}}</h5>
+			<h4>{{now_area.low}}~{{now_area.high}}</h4>
+			<h2>{{now_area.weather}}</h2>
+		</div>
 
-        </div>
-    </div>
+	</div>
+	</div>
 
 
 	<!-- 美化雨量觀測顯示、資料處理或建立資料分頁功能 -->
@@ -407,4 +412,5 @@
 	<script src="js/uv.js"></script>
 	<script src="js/weather.js"></script>
 </body>
+
 </html>
