--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
 			<p class="title">TaiwanWeatherMap台灣即時天氣播報站</p>
 		</div>
 	</nav>
+
 	<section>
+
 		<div id="app">
+			<div class="info">
+				<div class="location">
+					<div class="city_name"></div>
+					<div class="weather"></div>
+					<div class="temperature"></div>
+					<div class="rain_percentage"></div>
+					<div class="precipitation"></div>
+				</div>
+			</div>
 			<svg class="taiwan_map" id="cf503461-00bd-459a-aeb5-062ebc913211" data-name="圖層 1"
 				xmlns="http://www.w3.org/2000/svg" viewBox="0 0 470.28 795.89" width="600px" height="600px"
 				fill="#18B7BE">
@@ -44,9 +55,6 @@
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9" d="M92.75,406.85l1.58-.24L94,407.83l-1.22-1Z" />
 				<path id="f2be3e90-3318-427f-a854-c65a6fa8d146" data-name="path2470"
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9" d="M63.72,439.41l-.12,1.71,1.46-.61-1.34-1.1Z" />
-				<path id="33db4d45-ad87-4c5b-9131-76185642fb2d" data-name="path2472"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M66.28,443.68l-2.93,1.59-1.1-.49.24,1.58,3.66-.24,2.8-1.71-.24-.85L67,443.31l-.73.37Z" />
 				<path id="0c879d5f-d1b8-44ab-8054-414fa434ecd5" data-name="path2474"
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 					d="M61.53,412.7l-.43.79L61,414l.55.61-1,1,.24.73.73.37.55.49.24.55-.61.31-.49,1.46.3.79-.79.24h-.92l-.73.49.24.67,1,.18,1.22,1.59v.91l-.37.73-.67.49-.49.61-.67.49-.67.18-1.22-1.1-.85.3-.61.49-.43.67-1,.92-.43.61.61.37h.92l.43-.55h2.74l.49-.43.61-.3,1.77.3.79.37h.92l.79-.37-.3-.79-.49-.61-.24-.67-.06-.85,1-1-.79-2,2.5-2.26-.24-.61-.67-.49-.12-.79.43-1.46-.37-.79-.43-.55-.18-.73.24-.67.67-.43h1.83l1.59-.43.67-.43.12-.92-.49-.43-.73.67-.73.18-.85-.43L65,410.14l.18-.79-.24-.67-.73.06-.55.49L62.14,412l-.61.67h0Z" />
@@ -62,41 +70,10 @@
 				<path id="3bb77815-2bc3-4801-b8fc-d6e3a2443162" data-name="penghu_country" data-name-zh="澎湖縣"
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 					d="M77.44,422.09l-2,1.71-.79.24h-.92l.43.79v.92l-.18.85-1.22,1-.12.92.67.37,1.65-.73.67-.49,1,.06.61.43.55.61-1.83,2-.92.12-1.83-.31,1,1.16,1.4.61,1.1-.12.79-.49,2.74.06.55.73.3.79-.91,1.46-.12.49.79.55-.06.67-.73.73-.79-.06-.55-.49L78,436.3l-.91.12L76,438.74l-1,1.1.43.73,1.77.18,1-.12,1.22-.43,1-.06,1.1,1.22.79-.18.12-.79.73-.67.06-.85.3-.85-.73-.43-.12-.67.61-.67.43-.79,3-2.38.79-.12L89,431.06l.24-.73.67-.55,4.21-.12,1.28-.61.55.43.18.91.43.79.73.49.85-.18.67-.37h1l.37-.55L98,428.31l-.55-2,.24-.73v-.91l-.37-.79-1.64-1.77-.43-1.4-.49.55-.24,1.71-.85-.12-.43-.85-.55-.61.24-.55.49-.37-1.16-1.1-.79-.31-.55.55-1.16,2.13-.67-.12-.61.18-1,1-.18.73-.49.12-.06-2.74.67-1.46-1,.12-.55.37-3.54.61-.55.43.06.85.49.67v.91l-.37.61-.85.24-.55.67v1.89l-.49.55-.91-.43-.67-.61.12-1.22-1-.12-.12-.85.49-.79.06-.55-.61-.73h0Z" />
-				<path id="0f057a18-828f-4ff7-94f5-abb66ccdce44" data-name="path2484"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M70.43,430.81l-.37.92-.67.3-.24.79.06,1.77,1,.49.3.49.61.55.24-.61-.49-.61.79-.73-.49-.55-.18-2-.61-.49" />
 				<path id="f6f5c3fb-2bf4-4126-a7a7-28f4e5592dff" data-name="path2486"
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 					d="M72,436.36v1l3,.06.37-.55-.49-.61-.73-.55-.37-.55-.18.67-1.59.55h0Z" />
-				<path id="8f150979-52b7-46a0-a2fa-4fefa7e27d3a" data-name="path2488"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M82.34,387.54,81,389.69l.26,1.12.86.34.78-1.21.86-.69,1.12.17.86-.43.78-.78-2.85-2-.69.09-.69,1.21h0Z" />
-				<path id="162fa384-b319-4d01-a6ea-501cca0769fa" data-name="path2490"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M22.84,462.3l-.95,2.16.95.6L24,464.8l.95-.6v-.86l-1.55-1.21-.52.17Z" />
-				<path id="3a11933f-2e32-4079-bca8-5259168f23fa" data-name="path2492"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M58,465.75l.6,1.29v6l-.26,1.12-1,.43.6.86,3.79.09.26-.6-.43-.95.43-.86,1.12-.34.86.95.86.6,1-.34.6-.69h1.29l.78-.52-.34-1.12-.52-.86-1.12.43-1.38,1.55-3.1-1.81-.34-.95v-2.59l-.69.17-1.29-.09L58,465.75h0Z" />
-				<path id="7490e04c-2b1a-4fed-885e-81a321fa81f0" data-name="path2494"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9" d="M64.84,493.34l.17,1.29,1.12.09-.69-.95-.6-.43Z" />
-				<path id="8df3e5d2-ac6d-4b3c-8ece-27f289940307" data-name="path2496"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M67.25,495.24l-.35,1.38-.69.95,1.12-.34,1.21-1.55-1.29-.43Z" />
-				<path id="44de2157-cd0f-4c49-acbe-3f3eb067419b" data-name="path2498"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M94.24,496.27l-.6,1.29.52.78v.95l.78.78.52-.09v-1.29l.86-.95.43-.86-.69-.6-1.29-.09-.52.09h0Z" />
-				<path id="b0b2ccdd-fcdf-4a6f-9b32-6959a098936a" data-name="path2500"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M45.35,505l-2.16.78-.26,1,.26,1.21.78.6v1.29l1.21,1.64.43.17.09-1.21,1-.69,1-.26.26-2.5.86-.78-1.72-1.38-1.81.09h0Z" />
-				<path id="a79d6566-3a81-4189-bd0f-4dc972de6fa0" data-name="path2523"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M559.38,143.41l1,.6.86-.09.17-1.12,1.21-.09,1.21.17.34,1.12,1.12.69-.43.69-1.12.43-2.5-.09-1.38-1.29-.52-1h0Z" />
-				<path id="3068b8ea-2f06-4a38-a3fe-192fea39a5d2" data-name="path2525"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M465.06,628.56v1.83l1.58,1.1.49,1.71V635l.73.85,1.71.24,1.71,2.07,1.71.49,1.22-.24L473,637.21l-.12-1.46,1.95-2.8v-1.83l-.36-1.59-1.1-.85-1.83.12-1.59-.73-3.54.61-1.34-.12h0Z" />
-				<path id="4f83d8a6-50fd-42c9-b927-6a9680868ba7" data-name="path2527"
-					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-					d="M485.42,775.14l1,1.34,1.1,1h1.83l1.71.37.85-.24.49-1.34.85-1.1.24-1.58-1.59-.73-1.1-1.1-1.34-.36-2.93-2.56-.49-1.34.12-1.71,1.71-.12-.12-1.46-1-1-.24-1.58.85-1-.73-1.1-6.71.12-1.34.49h-3.66l-1.1-.73-1.1.24v1.22l1.34.85v5.37l.73,1.1,1.71.61,3.41,4.27h3.66l1.46,1,.36,1.1h0Z" />
+				
 				<path id="2b6aac2d-ce2d-4c48-89d5-ff2a81000e07" data-name="chiayi_country" data-name-zh="嘉義縣"
 					class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
 					d="M193.2,485l-.14-1.13-1.11-.43h-2.58l-.28-1,.11-3.46,2-4.74,1,.09,2.5-1,.87-3.44.68-1.13-.17-2.41-.43-.6-1,.85-.85-.68-.53-1-.09-1.28.7-2.16v-1.13l-1-.26.09-1.2,1.47-2.86h-1.13l-1.11-.6L192,454l.51-1v-1.39l.6-.77.34-1.22.53-.94v-1.3l-1-.43-3.88.26-1.2-.43-.6-1,.26-6.21,1.07-.6,2.63.09,4,1.55h2.59l1,1.55h2.59l1.9-.86,4.31,1.55,2.59.34,1.55-1.21,1.21-1.55.17-2.41-.52-2.07,1.38-1.38h2.24v2.24l2.41.86.69-1.9,3.28-1.9.52-2.41,1.21-1.38,4.31-1.72,1.9,1,1.21-4.14,1-1.72,2.76.17,1.72-.86.69-2.07,4-1.21.69-1.9,1.55-1.21,1.21-1.55,1.9.86,1.55,1.21,1.9.69,4-1.55h5.17l3.62-1.9L267,415l1,3.45,2.93,2.41,1,1.55,1.72,1,2.41.17,1.55,1.21,2.07.69,9.49,1,1.9-1,1.21-1.38,3.79.17-.34,2.59,1.38,2.24,1.38-1.38,2.24-.52,1.38,1.38,2.07-.17,1.9-.69,2.41.17,1.9,1,2.41.34.86-1.72v-2.41l-.52-2.07-1-1.55,1.12-1.64,4.4-.43,7.93,2.93h2.59l2.24.52.86,1.72.17,5.86-.52,2.24-1.9,1.55v2.59l1,1.72,1.55,1.38.34,5,1.72,4,1.38,1.55,7.76.86,3.79-1.55,7.59.69,1.9.69,5.83.15-.83.19-1.72.86-4.48.69-1.55,1-4.31.86-2.93,2.41-1,1.72-1.9.86-1.55,1.21-2.24.35-1.55,1.72-1.21,2.93-1.21,1-.69,1.9-1.21,1.38-.17,2.41-1.9.69h-2.59L327.51,475l-1,1.72-2.76,2.76-4.83.34-1.55,4-3.45,1.72-.69,1.9-4.48.34-.86,4.48-5.52-.17-1.55-1.38-5.35-.17-.86,7.93.86,1.9,1.38,1.72v2.59l-1.38,1.21-1.72-.86-4.31.86-2.07-.69-2.41-1.72-2.59,3.8-2.07.52-2.24-.17-2.93-2.07-4.14-1.21-.69-1.72,2.24-3.28-.52-1.72-1.38-2.24-.35-1.72.86-1.72-.69-1.9-.17-2.41,1-1.9,1.55-1.21.17-2.07-.69-1.9-2.41-.17-2.59-.86-.69-1.55,1.72-1.21-.17-2.24-5.35-.34v-2.24l1.72-1.21,1-1.55L264.21,468l-1.55.86-2.07-.52-1.72-1.38-2.24-.69-1.21-1.55-2.59-.69-.17.34-1.55,1-2.24.17-1.38-1.38-2.24.35-3.62,1.72h-5.17l-4.14,2.41-.17.17-1,1.72-4.31-.17.17,2.07-4.83.34-.34,2.24-.86,1.72-1.21,1-1.72-1-1.38,1.38.69,1.9-.34,1.21-6.55,3.28-.52,2.07-2.24,3.28-2.07.86-3.1-.86-.86-1.38v1.89l-1.72-.17-1.55-1.38-.69-2.07-2.59-.52L193.2,485h0Z" />
@@ -178,20 +155,7 @@
 					<path id="1618ff3b-8feb-42b3-b000-0d7dc2b4b993" data-name="path2657"
 						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9" d="M111.85,244l-.38.38.88-.06-.5-.31Z" />
 				</g>
-				<g id="b4580596-7aaa-48a3-92ab-b42140cb045a" data-name="g4342">
-					<path id="ff86635c-ee98-49d4-97fa-6fd2fc2b5f2e" data-name="path4338"
-						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-						d="M156.95,207l-.37,1.71,1,1,1.1.49v-1.83l-.85-1-.85-.37Z" />
-					<path id="823f642f-4652-4db6-b3d7-56e4e98c95e2" data-name="path4340"
-						class="96fdfe13-4732-40bb-9e9c-cdc6e310fcb9"
-						d="M161.7,209.95l-.85,1.46,1.22.73,1.22-.85-.85-1-.73-.37Z" />
-				</g>
 				<g id="13520621-f1ed-4c7b-8b5d-1a169d9bf935" data-name="g4313">
-					<path id="017d8352-40c4-43f3-b3c3-4910f7ad1925" data-name="path2671"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3" d="M49,147.87h4.07L51.76,150l-3-.27.27-1.9Z" />
-					<path id="4330177a-8933-40bc-981d-f25c97f05ea3" data-name="path2673"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
-						d="M59.36,149.23l-2.72,6.52,1.09-.27,5.16-3.53-2.71-1.09-.81-1.63Z" />
 					<path id="cbfdad05-a89f-40ed-902b-cdd90c10f2fe" data-name="path2675"
 						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
 						d="M45.79,102l-.27,3,.54,3.26-.54,1.9,4.34.54,3.26-.81,4.34-3.53-1.9-2.44-2.17,1.9-3,.54-1.63-2.17-3-2.17Z" />
@@ -200,17 +164,6 @@
 					<path id="167388a5-547c-4480-932a-6c0a66e1048a" data-name="path2679"
 						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
 						d="M58,91.41l.27,6.52.54-3L61,93.58l3.26-.27,2.44-1.63,1.9,2.17.54-1.36-2.44-4.07-8.69,3Z" />
-					<path id="f2323ce6-4de0-4fd5-9e90-8aa5c070854a" data-name="path2681"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
-						d="M62.35,77.29l-1.63,3.26,1.16.49,1.28-1-.81-2.71Z" />
-					<path id="3dc2b0c9-caa5-41e4-a9fd-9ba7b2a05d51" data-name="path2683"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3" d="M66.42,84.62l-1.9,1.9L67.23,86l-.82-1.36Z" />
-					<path id="7c90d772-951b-4902-97ae-a2a6a67d9b26" data-name="path2685"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
-						d="M179.07,56.79l-.07,1-.54.61-.27.81.81.54,2.78-.88,1-1.49.81.2.88-.27-.41-.75-1-.34L181.79,55l-.75-.14L180.57,56l-.68.81-.81-.07h0Z" />
-					<path id="41139c2e-8a21-41a3-8f99-e78e1cdfc573" data-name="path2687"
-						class="bc4bd339-f614-4405-a1f2-7f894051d5a3"
-						d="M176.9,53.81l-1.63,1.43.14.47,2.85.2-.14-.81-1.22-1.29Z" />
 				</g>
 			</svg>
 		</div>
@@ -379,8 +332,14 @@
 				</ul>
 			</div>
 		</div>
+
 	</section>
-	<div class="title_area">
+
+
+
+
+
+	<!-- <div class="title_area">
 		<hr />
 		<div class="forcast" v-if="now_area">
 			<h5>{{now_area.place}}</h5>
@@ -389,9 +348,7 @@
 		</div>
 
 	</div>
-	</div>
-
-
+	</div> -->
 	<!-- 美化雨量觀測顯示、資料處理或建立資料分頁功能 -->
 	<!-- <h3>雨量觀測</h3>
 	<div id="raining"></div> -->
@@ -411,6 +368,7 @@
 	<script src="js/raining.js"></script>
 	<script src="js/uv.js"></script>
 	<script src="js/weather.js"></script>
+	<script src="js/map.js"></script>
 </body>
 
 </html>
