--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 					<div id="wx" class="weather"></div>
 					<div id="temp" class="temperature"></div>
 					<div id="ci" class="comfort_index"></div>
-					<div id="precipitation" class="precipitation"></div>
 				</div>
 			</div>
 			<svg version="1.1"
@@ -622,35 +621,13 @@
 			</div>
 		</div>
 	</section>
-	<footer>
 
+
+	<footer>
+		<p>Copyright © 中央氣象局</p>
 	</footer>
 
-	<!-- <div class="title_area">
-		<hr />
-		<div class="forcast" v-if="now_area">
-			<h5>{{now_area.place}}</h5>
-			<h4>{{now_area.low}}~{{now_area.high}}</h4>
-			<h2>{{now_area.weather}}</h2>
-		</div>
 
-	</div>
-	</div> -->
-	<!-- 美化雨量觀測顯示、資料處理或建立資料分頁功能 -->
-	<!-- <h3>雨量觀測</h3>
-	<div id="raining"></div> -->
-
-	<!--
-		完成各縣市氣象預報功能
-		請使用中央氣象局公開 API 的第一個資料集 (/v1/rest/datastore/F-C0032-001)
-		https://opendata.cwb.gov.tw/dist/opendata-swagger.html?urls.primaryName=openAPI#/
-	-->
-	<!-- <h3>各縣市最新氣象預報 ( 文字描述、低溫、高溫 )</h3>
-	<div id="weather"></div> -->
-	<script>
-		// 以下是我申請的 KEY 請使用無所謂，你也可以自己去中央氣象局網站申請一個
-		// https://opendata.cwb.gov.tw/index
-		// const CWB_API_KEY="CWB-2EF6C203-2256-404D-AD80-5E9DE0982C6A";
 	</script>
 	<script src="js/raining.js"></script>
 	<script src="js/uv.js"></script>
